Moved Quickey questions to tutorhint environment, i.e. removed from students version of the scrip.

--- a/Versuch_11-12n/Anleitung-11.tex
+++ b/Versuch_11-12n/Anleitung-11.tex
@@ -94,13 +94,13 @@ Aufgrund der Dispersion des Glases hängt der Brechungswinkel von der Wellenlän
 	\frac{d\delta}{d\lambda} = \frac{\partial\delta}{\partial n} \frac{dn}{d\lambda}.
 \end{equation}
 Der erste Faktor kann aus der Fraunhoferschen Formel berechnet werden, der zweite $\frac{dn}{d\lambda}$ ist die Dispersion.
+
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
 
 \begin{enumerate}
- %
-% \item Was soll heute im Praktikum gemessen werden? Warum?
  %
  \item Welchen physikalischen Vorgang beschreibt das Snellius'sche Brechungsgesetz?
  %
@@ -117,6 +117,7 @@ Der erste Faktor kann aus der Fraunhoferschen Formel berechnet werden, der zweit
  \item Wird im Prisma rotes oder blaues Licht stärker abgelenkt?
  %
 \end{enumerate}
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
