--- a/Versuch_11-12n/Anleitung-12.tex
+++ b/Versuch_11-12n/Anleitung-12.tex
@@ -7,7 +7,7 @@ In diesem Versuch benutzen Sie den Effekt der Beugung von Licht an einem optisch
 \section{Stichworte}
 %------------------------------------------------
 
-Koh"arenz; Interferenz; Huygens'sches Prinzip; Gitterkonstante; Interferenzfilter; Beugung am Gitter.
+Kohärenz; Interferenz; Huygens'sches Prinzip; Gitterkonstante; Interferenzfilter; Beugung am Gitter.
 %
 %------------------------------------------------
 \section{Literatur}
@@ -75,37 +75,28 @@ Offenbar hängt die Richtung, unter der man ein Interferenzmaximum beobachtet, v
 
 Ein (optisches) Gitter ist ein Anordnung aus vielen schmalen Spalten, die den (konstanten) Abstand $d$ voneinander haben. Die Anzahl der Spalten pro mm bezeichnet man als \textit{Gitterkonstante}.\\
 Für die Beugung am Gitter gelten dieselben Überlegungen wie beim einzelnen Spalt (oder beim Doppelspalt). Mit Hilfe von Gleichung \ref{eq:Interferenzmax} kann man aus der Messung des Ablenkwinkels für das Maximum der $n$ten Ordnung die Wellenlänge bestimmen.
-%den Abstand $\delta$ zwischen zwei Interferenzmaxima bestimmen. Wenn der Beobachtungsschirm im Abstand $L$ vom Spalt oder Gitter steht, so gilt 
-%\begin{equation}\label{eq:10.1}
- %\frac{n\cdot\lambda}{d} = \sin\alpha = \frac{\delta}{L}\, .
-%\end{equation}
-%Diesen Zusammenhang kann man benutzen, um aus den messbaren Gr"o{\ss}en $L$ und $\delta$, mit Kenntnis der Gitterkonstante $d$, die Wellenlänge des einfallenden Lichtes zu messen:
-%\begin{equation}
- %\lambda = \delta\cdot\frac{d}{L}\, .
-%\end{equation}
 
-
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
 
 \begin{enumerate}
  %
- %\item Was soll heute im Praktikum gemessen werden? Warum?
- %%
  \item Was besagt das Huygens'sche Prinzip?
  %
  \item Was ist Interferenz?
  %
- \item Welche Bedingungen m"ussen f"ur die Beobachtung von Interferenzerscheinungen erf"ullt sein?
+ \item Welche Bedingungen müssen für die Beobachtung von Interferenzerscheinungen erfüllt sein?
  %
  \item Was bezeichnen die Gitterkonstante und der Gangunterschied?
  %
  \item Wird am Gitter rotes oder blaues Licht st"arker abgelenkt?
  %
- \item Welche Gr"o{\ss}e wird im Praktikum gemessen, welche Größe wird daraus berechnet?
+ \item Welche Größe wird im Praktikum gemessen, welche Größe wird daraus berechnet?
  %
 \end{enumerate}
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
