--- a/Versuch_13-14n/Anleitung-14.tex
+++ b/Versuch_13-14n/Anleitung-14.tex
@@ -24,7 +24,6 @@ In Materialien mit einfachem Molekülaufbau, z. Bsp. in Metallen ist die Absorpt
 \section{Theoretischer Hintergrund}
 %------------------------------------------------
 
-%Schallwellen, die sich in einem Medium ausbreiten, verursachen eine zeitlich und räumlich periodische Änderung von Dichte, Druck und Temperatur. Man kann die Ausbreitung der Welle in jeder dieser Größen darstellen, wir entscheiden uns hier für die Darstellung durch den zeitlichen und räumlichen Verlauf des Druckes $p = p(x,t)$.
 \subsection{Deformation von Festkörpern}
 
 Das Verhalten von Festkörpern unter Deformation ist recht kompliziert und mathematisch sehr anspruchsvoll. Da wir allerdings einige der Zusammenhänge brauchen, um die Ausbreitung von Wellen in Fluiden und Festkörpern zu verstehen, seien sie hier knapp zusammengefasst.
@@ -166,6 +165,7 @@ Eine wichtige Anwendung des TM-Scans ist das Herzecho. Man schaut hier auf die W
 Um auch in Querrichtung Informationen zu erhalten, lässt man den Schallkopf nicht nur einmal den Schall aussenden und wieder einfangen, sondern scannt in verschiedenen Winkeln die Körperstrukturen ab. Die aneinandergesetzten A-Scan-Linien entsprechen nun verschiedenen Durchstrahlrichtungen und das Bild zeigt eine Schnittebene durch den Körper. Diese Darstellung heißt B-Bild oder B-Scan (von
 brightness).
 
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -183,6 +183,7 @@ brightness).
 	%
 	\item Wie funktioniert die Konzentrationsmessung in einem Elektrolyten per Ultraschall? 
 \end{enumerate} 
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
