--- a/Versuch_15-16n/Anleitung-15.tex
+++ b/Versuch_15-16n/Anleitung-15.tex
@@ -8,7 +8,7 @@ In diesem Versuch lernen Sie grundlegende Schaltungen kennen, die die Bestimmung
 \section{Stichworte}
 %------------------------------------------------
 
-Spannung und Strom; Spannungs- und Strommessung; Widerstand, Ohm'sches Gesetz; Kirchhoff'sche Gesetze; Wheatstone'sche Br"uckenschaltung; Innenwiderstand; Spannungsteilerschaltung.
+Spannung und Strom; Spannungs- und Strommessung; Widerstand, Ohm'sches Gesetz; Kirchhoff'sche Gesetze; Wheatstone'sche Brückenschaltung; Innenwiderstand; Spannungsteilerschaltung.
 %
 %------------------------------------------------
 \section{Literatur}
@@ -32,7 +32,7 @@ Die elektrische \textit{Spannung} ist die Differenz der Coulombpotenziale an zwe
 \begin{equation}
 	U = \Phi_A - \Phi_B
 \end{equation}
-Wie man an dieser Definition sieht, bezieht sich die Angabe einer Spannung immer auf ein Referenzpotenzial, welches entweder explizit angegeben wird (''Spannung zwischen Punkten A und B'') oder impliziert wird (typischerweise die sogenannte ''Erde''). Daher kann eine Spannung \textit{positiv} oder \textit{negativ} sein, je nachdem ob das Potenzial am beschriebenen Punkt höher oder niedriger als das Referenzpotenzial ist. Bei einer Spanungsquelle in einem elektrischen Schaltkreis nennt man den Anschluß mit dem höheren Potenzial den \textit{Pluspol} und den mit dem niegrigeren Potenzial den \textit{Minuspol}. Bei den Schaltsymbolen in den nachfolgenden Schaltplänen bezeichnet der längere Strich an der Spannungsquelle den Pluspol.\\
+Wie man an dieser Definition sieht, bezieht sich die Angabe einer Spannung immer auf ein Referenzpotenzial, welches entweder explizit angegeben wird (''Spannung zwischen Punkten A und B'') oder impliziert wird (typischerweise die sogenannte ''Erde''). Daher kann eine Spannung \textit{positiv} oder \textit{negativ} sein, je nachdem ob das Potenzial am beschriebenen Punkt höher oder niedriger als das Referenzpotenzial ist. Bei einer Spanungsquelle in einem elektrischen Schaltkreis nennt man den Anschluß mit dem höheren Potenzial den \textit{Pluspol} und den mit dem niedrigeren Potenzial den \textit{Minuspol}. Bei den Schaltsymbolen in den nachfolgenden Schaltplänen bezeichnet der längere Strich an der Spannungsquelle den Pluspol.\\
 Diese Potenzialdifferenz erzeugt ein elektrisches Feld ($\vec{E} = -\mathrm{grad}\Phi$), welches auf geladene Teilchen (zum Beispiel Elektronen) eine \textit{Coulombkraft} in Richtung der Feldlinien ausübt und diese damit beschleunigt. Negativ geladene Elektronen werden dabei auf den Pluspol zu beschleunigt. Die resultierende \textit{Drift} der Ladungsträger, zum Beispiel in einem Draht, nennt man dann \textit{Strom}:
 \begin{equation}
 	I = \frac{dQ}{dt}
@@ -122,7 +122,7 @@ U_2 = U_0\cdot\frac{R_2}{R_1+R_2}
 
 \subsection{Die Wheatstone'sche Brückenschaltung} \label{chap:Wheatstone}
 
-Widerstände im Bereich von 0,01 $\Omega$ bis 10 M$\mathrm{\Omega}$ werden oft mit einer Meßbrückenschaltung nach Wheatstone (siehe Abbildung rechts) gemessen. Der zu messende Widerstand sei $R_3$. Er läßt sich bei \"abgeglichener\" Brücke, d.h. wenn kein Strom durch das Amperemeter fließt, aus der Beziehung
+Widerstände im Bereich von 0,01 $\Omega$ bis 10 M$\mathrm{\Omega}$ werden oft mit einer Meßbrückenschaltung nach Wheatstone (siehe Abbildung rechts) gemessen. Der zu messende Widerstand sei $R_3$. Er lässt sich bei \"abgeglichener\" Brücke, d.h. wenn kein Strom durch das Amperemeter fließt, aus der Beziehung
 \begin{equation}
  R_3 = R_4\frac{R_1}{R_2}
  \label{eq:Wheatstone}
@@ -155,7 +155,7 @@ Da bei abgeglichener Brücke $I_1 = I_2$ und $I_3 = I_4$ ist, folgt für $R_3$ G
  Brückenschaltung nach Wheatstone.
 \end{minipage}
 
-
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -172,12 +172,11 @@ Da bei abgeglichener Brücke $I_1 = I_2$ und $I_3 = I_4$ ist, folgt für $R_3$ G
  %
  \item Wie berechnet man den Gesamtwiderstand bei Reihen- und Parallelschaltungen von Widerständen?
  %
- %\item Was ist ein Innenwiderstand?
- %
  \item Wie funktioniert die Spannungsteilerschaltung (Schaltskizze und Erklärung)?
  %
  \item Wie funktioniert die Wheatstone'sche Brückenschaltung (Schaltskizze und Erklärung)? Was kann man mit ihr messen?
 \end{enumerate}
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
