--- a/Versuch_15-16n/Anleitung-16.tex
+++ b/Versuch_15-16n/Anleitung-16.tex
@@ -54,14 +54,14 @@ Mit Gleichung \ref{eq:Fick1}) erhält man die allgemeine Diffusionsgleichung\\
 \end{equation}
 
 Diese Art der Diffusion, die durch einen Konzentrationsgradienten getrieben wird, nennt man auch \textit{nichtstationäre Diffusion}. Ihr gegenüber steht die \textit{stationäre Diffusion}, auch Selbstdiffusion genannt, die beschreibt wie sich Teilchen innerhalb derselben Substanz bewegen. Da die Teilchen prinzipiell ununterscheidbar sind, ist die stationäre Diffusion allerdings sehr schwierig zu beobachten.
+
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
 
 \begin{enumerate}
  %
- %\item Was soll heute im Praktikum gemessen werden? Warum?
- %%
  \item Was ist eine Wheatstone'sche Brückenschaltung? Wie funktioniert sie?
  %
  \item Was ist ein Photowiderstand?
@@ -70,13 +70,12 @@ Diese Art der Diffusion, die durch einen Konzentrationsgradienten getrieben wird
  %
  \item Welcher Effekt wird als Diffusion bezeichnet?
  %
- %\item Was ist stationäre bzw. nichtstationäre Diffusion?
- %
  \item Was ist die Bedeutung der Diffusionskonstanten D (Diffusionsgleichung für stationäre Diffusion) ?
  %
  \item Wie wird ein Photowiderstand zusammen mit einer Wheatstone Brücke zur Messung der Diffusion benutzt ?
 %
 \end{enumerate}
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
