--- a/Versuch_17-18n/Anleitung-17.tex
+++ b/Versuch_17-18n/Anleitung-17.tex
@@ -99,14 +99,12 @@ Man erhält die Aktivität als Zeitableitung des Zerfallsgesetzes:
 \end{equation}
 Wie man sieht, nimmt die Aktivität einer radioaktiven Probe exponentiell mit der Zeit ab, die Zeitkonstante is $1/\lambda$. Diese natürliche Abnahme der Aktivität nennt man Abklingen.
 
-
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
 
 \begin{enumerate}
-	%
-%	\item Was soll heute im Praktikum gemessen werden? Warum?
 	%
 	\item Wie ist ein Atom aufgebaut?
 	%
@@ -132,6 +130,7 @@ Wie man sieht, nimmt die Aktivität einer radioaktiven Probe exponentiell mit de
 	\item Wieso mißt man auch ohne ein radioaktives Präparat eine von Null verschiedene Aktivität (Nulleffekt)? Woher kommt sie?
 	%
 \end{enumerate}
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
