--- a/Versuch_17-18n/Anleitung-18.tex
+++ b/Versuch_17-18n/Anleitung-18.tex
@@ -74,13 +74,13 @@ Das nebenstehende Bild zeigt ein Foto des Versuches mit Zubehör: Fadenstrahlroh
 	Das Fadenstrahlrohr ist drehbar um seine Längsachse. Das bedeutet, dass die Richtung des Elektronenstrahls bzgl. der Richtung des Magnetfeldes eingestellt werden kann. Wenn der Elektronenstrahl nicht senkrecht zum Magnetfeld steht, so erfährt er nicht nur eine Ablenkung auf die Kreisbahn, sondern behält zusätzlich eine Geschwindigkeitskomponente in Richtung des Magnetfeldes. Da auf diese keine Kraft wirkt, bleibt sie erhalten und führt dazu, dass der Strahl keine reine Kreisbahn bildet, sondern eine Spirale.\\
 	Um das zu korrigieren kann das Fadenstrahlrohr per Hand so ausgerichtet werden, dass der Strahl wieder senkrecht zum Magnetfeld steht.
 }
+
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
 
 \begin{enumerate}
-	%
-%	\item Was soll heute im Praktikum gemessen werden? Warum?
 	%
 	\item Wie lautet der Ausdruck für die Kraft zwischen zwei Punktladungen?
 	%
@@ -99,6 +99,7 @@ Das nebenstehende Bild zeigt ein Foto des Versuches mit Zubehör: Fadenstrahlroh
 	\item Wie berechnet sich aus Zentrifugalkraft und Lorentzkraft ein Ausdruck für die Spezifische Elektronenladung $e/m$?
 	%
 \end{enumerate}
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
