--- a/Versuch_19-20n/Anleitung-19.tex
+++ b/Versuch_19-20n/Anleitung-19.tex
@@ -73,6 +73,7 @@ Bezogen auf ein mol eines Stoffes erhält man genauso dessen \textit{molare Wär
  C_{mol} = N_A\frac{f}{2}k = 3\,N_A\,k = 24,9\,\mathrm{J\,mol^{-1}\,K^{-1}}\; .
 \end{equation}
 
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -94,6 +95,7 @@ Bezogen auf ein mol eines Stoffes erhält man genauso dessen \textit{molare Wär
  %
  \item Wie funktioniert ein Druckkochtopf?
 \end{enumerate} 
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
