--- a/Versuch_3-4n/Anleitung-3.tex
+++ b/Versuch_3-4n/Anleitung-3.tex
@@ -228,6 +228,8 @@ Ein einfaches Beispiel ist die Reihenschaltung eines Kondensators mit einem Wide
 	\label{fig:Hoch-Tiefpass}
 \end{figure}
 Eine Teilspannung ist proportional dem Teilwiderstand, über dem sie abgegriffen wird. Für tiefe Frequenzen ist der Widerstand des Kondensators groß, so dass hier der Hauptanteil der Eingangsspannung abfällt. Der Abgriff über dem Kondensator stellt einen \textit{Tiefpass} dar. Für hohe Frequenzen ist umgekehrt der Widerstand des Kondensators klein und der des Widerstandes vergleichsweise groß, so dass der Abgriff über dem Widerstand als \textit{Hochpass} wirkt.
+
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -283,6 +285,7 @@ Eine Teilspannung ist proportional dem Teilwiderstand, über dem sie abgegriffen
 	\end{solution}
  %
 \end{enumerate}
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
