--- a/Versuch_3-4n/Anleitung-4.tex
+++ b/Versuch_3-4n/Anleitung-4.tex
@@ -70,6 +70,8 @@ Für die Stromübersetzung im Kurzschlußfall findet man:
 \begin{equation} \label{eq:Stromuebersetzung}
 \frac{I_2}{I_1} = \frac{M}{L_2} = \frac{N_1}{N_2}
 \end{equation}
+
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -77,8 +79,6 @@ Für die Stromübersetzung im Kurzschlußfall findet man:
 \etodo{Restliche Antworten für Quicky-Fragen.}
 
 \begin{enumerate}
-	%
-	%\item Was versteht man unter elektrischer Leistung? Was gilt für die mittlere elektrische Leistung in einem Wechselstromkreis? (Stichwort: Phasenverschiebung zwischen Strom und Spannung)
 	%
 	\item Wie lautet der Zusammenhang zwischen Strom und Spannung für einen ohmschen Widerstand in einem Wechselstromkreis?
 		\begin{solution}
@@ -95,10 +95,6 @@ Für die Stromübersetzung im Kurzschlußfall findet man:
 			$$U(t) = -L\cdot\frac{dI}{t}$$
 		\end{solution}
 	%
-%	\item Wie lautet der Zusammenhang für den Gesamtwiderstand (Impedanz) einer Reihenschaltung von ohmschen, kapazitiven und induktiven Widerstand in einem Wechselstromkreis?
-	%
-%	\item Was haben das Magnetfeld eines Stabmagneten und das einer Spule gemeinsam? Wie sieht der Verlauf der Feldlinien aus?
-	%
 	\item Wie verlaufen die Magnetfeldlinien im Inneren einer langen Spule? Welcher Zusammenhang gilt zwischen magnetischer Flussdichte B und Stromstärke I (keine detaillierte Formel, nur proportional, quadratisch, reziprok o.ä.)?
 	%
 	\item Was ist die Lorentzkraft? Wie ist sie definiert?
@@ -109,9 +105,8 @@ Für die Stromübersetzung im Kurzschlußfall findet man:
 	%
 	\item Was versteht man unter einem unbelasteten Transformator? Was versteht man unter einem belasteten Transformator? (Hilfe: Schaltskizze)
 	%
-%	\item Wie leitet sich das Spannungsübersetzungsverhältnis $\frac{U_1}{U_2}=\frac{N_1}{N_2}$ bzw. das Stromübersetzungsverhältnis $\frac{N_1}{N_2}=\frac{I_2}{I_1}$ beim Transformator ab ?
- %
 \end{enumerate}
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
@@ -120,7 +115,6 @@ Für die Stromübersetzung im Kurzschlußfall findet man:
 \begin{enumerate}
 	%
 	\item \label{VT1}
-	%\textit{Der Folgende Versuchsteil wird durch den Assistenten durchgeführt:}\\
 		\textbf{Phasenverschiebung an einer Spule:}\\
 		Man schließe den Schiebewiderstand in Reihe mit der Primärspule (Spule 1 = Sp1) des Transformators und verbinde sie direkt mit dem Ausgang des Netzgerätes. Man stelle die Spannung an der Spule und die Spannung am Ausgang des 
 		Netzgerätes auf dem Oszilloskop dar.\\
