--- a/Versuch_5-6n/Anleitung-6.tex
+++ b/Versuch_5-6n/Anleitung-6.tex
@@ -1,14 +1,9 @@
 \chapter{Trägheitsmoment}
 \label{v:2}
 
-\etutorhint{Bitte führen Sie zuerst den Pohl-Versuch durch. Damit versuchen wir sicherzustellen, dass nicht gleichzeitig Pohl und e/m im selben Raum laufen. Für den Versuch e/m muss der Raum komplett abgedunkelt sein...}
-
 In diesem Versuch lernen Sie die Grundlagen der Rotation starrer (nicht verformbarer) Körper kennen.\\
 Zur Vorbereitung ist es nützlich, sich den theoretischen Hintergrund von Versuch \ref{v:1} anzuschauen, wenn Sie diesen Versuch noch nicht gemacht haben.
-% Zusätzlich: Schwingen mit angezogenen Armen beim Laufen, um Rotationsenergie zu reduzieren,
-% Pirouette beim Eiskunstlauf
-% --> Haben wir einen Probekörper an einer langen Achse?
-% --> Drehmoment in die Anleitung?
+
 %------------------------------------------------
 \section{Stichworte}
 %------------------------------------------------
@@ -103,6 +98,7 @@ Drehschwingungen aus. Das Symbol $\dot{\vec{L}}$ bezeichnet dabei die zeitliche 
 \end{equation}
 $T$ ist hierbei die Schwingungsdauer.
 
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -124,6 +120,7 @@ $T$ ist hierbei die Schwingungsdauer.
  \item Wie ist der Drehimpuls definiert? (Formel und Einheit)
  %
 \end{enumerate} 
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
