--- a/Versuch_7-8n/Anleitung-7.tex
+++ b/Versuch_7-8n/Anleitung-7.tex
@@ -78,7 +78,7 @@ und hängt an einer ringförmigen Lamelle, die die Kraft
  \sigma = \frac{1}{2}\rho\,g\,r\,h\; .
 \end{equation}
 
-
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -100,6 +100,7 @@ und hängt an einer ringförmigen Lamelle, die die Kraft
  %
  \item Wie funktioniert die Mohr'sche Waage?
 \end{enumerate} 
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
