--- a/Versuch_7-8n/Anleitung-8.tex
+++ b/Versuch_7-8n/Anleitung-8.tex
@@ -44,33 +44,27 @@ Die Viskosität von Flüssigkeiten nimmt mit steigender Temperatur sehr stark ab
 
 Ist die Viskosität unabhängig von der Geschwindigkeit $v$, so spricht man von eine \textit{Newton'schen Flüssigkeit}. Die meisten reinen Flüssigkeiten sind Newton'sch. Für bestimmte Mischungen hingegen lässt sich die innere Reibung nicht mehr einfach durch das \textit{Newton'sche Reibungsgesetz}, s. Gl. \ref{eq:Kraft}, beschreiben, die Fließeigenschaften ändern sich, wenn zum Beispiel eine äußere Kraft auf die Flüssigkeit einwirkt. Beispiele für solchen nichtnewtonsche oder anomalviskose Flüssigkeiten sind Blut, Zementleime, Treibsand oder Ketchup.
 
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
 
 \begin{enumerate}
  %
-% \item Was soll heute im Praktikum gemessen werden? Warum?
- %
  \item Wie ist der Druck definiert? (Einheiten)
- %
- %\item Was heißt hydrostatischer Druck?
  %
  \item Welche Strömungstypen gibt es?
  %
  \item Was ist Viskosität? Wodurch entsteht sie? Welche Einheit hat sie?
  %
- %\item Welche Einheit hat die Viskosität?
- %
  \item Wie verhält sich die Viskosität bei steigender Temperatur?
- %
- %\item Unter welchen Voraussetzungen gilt das Hagen-Poiseuillesche Gesetz?
  %
  \item Wie lautet das Hagen-Poiseuillesche Gesetz?
  %
  \item Worauf bezieht sich die Druckdifferenz $\Delta$p im Hagen-Poiseuilleschen Gesetz?
  %
 \end{enumerate}
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
