--- a/Versuch_9-10n/Anleitung-10.tex
+++ b/Versuch_9-10n/Anleitung-10.tex
@@ -18,12 +18,6 @@ Gehrtsen, Kapitel 9.1.1/2, 9.2.4 bis 9.2.6 und 10.1.5
 %------------------------------------------------
 \section{Theoretischer Hintergrund}
 %------------------------------------------------
-%\etodo{Mehr zum Hintergrund}
-
-%Optische Geräte sind uns in vielfältiger Form aus dem täglichen Leben vertraut. Das Lichtmikroskop hatte darüber hinaus als Instrument der physikalischen, chemischen, medizinischen und biologischen Forschung eine herausragende Bedeutung. Es stellt in einem Zweistufenvorgang vergrößerte Bilder sehr kleiner Gegenstände her und ermöglicht somit die Sichtbarmachung ihrer Eigenschaften und Strukturen.\\
-%
-%\noindent
-%Einer der bekanntesten Erfolge, die mit diesem Gerät erzielt wurden, ist die Entdeckung des Tuberkulose-Bakteriums durch Robert Koch im Jahre 1882. Für das Lichtmikroskop stellt die Beugung des Lichtes eine natürliche Grenze für das geometrische Auflösungsvermögen dar. Deshalb sind heute auch andere Mikroskope im Gebrauch, wie das Elektronenmikroskop oder das STM (Surface Tunneling Microscope).
 
 Beim Mikroskop multiplizieren sich die Wirkungen zweier Linsen oder Linsensysteme. Das \textit{Objektiv} erzeugt ein möglichst großes reelles Zwischenbild des gut beleuchteten Gegenstandes. Im Prinzip könnte man schon dieses Bild beliebig groß machen, indem man den Gegenstand immer näher an die Brennebene der Objektivlinse rückt, was jedoch einige Nachteile hat:
 \begin{itemize}
@@ -75,6 +69,7 @@ die numerische Apertur vergrößert sich auf $n\,\sin\varphi$.
 
 Diese \textit{Beugungsbegrenzung} des Auflösungsvermögens wird als \textit{Auflösungsbegrenzung} oder \textit{Abbe-Limit} bezeichnet, nach Ernst Abbe, der diese Beziehung im 19. Jahrhundert beschrieb. Neuere Mikroskopieverfahren erreichen Auflösungen, die wesentlich unter diesem Abbe-Limit liegen, indem sie Details eines Präparates, die zu dicht nebeneinanderliegen, um optisch aufgelöst zu werden, nacheinander aufnehmen und das gesamte Bild im Nachhinein wieder zusammensetzen\footnote{Z. Bsp. Nobelpreis für Chemie, 2014, Stefan Hell zusammen mit Eric Betzig und William E. Moerner „for the development of super-resolved fluorescence microscopy“}. Dies bedeutet jedoch auf keinen Fall, dass das Abbe-Limit nicht mehr gilt, wie man manchmal hört. Vielmehr wird es nur in cleverer Art und Weise umgangen.
 
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -102,6 +97,7 @@ Diese \textit{Beugungsbegrenzung} des Auflösungsvermögens wird als \textit{Auf
  \item Konstruieren Sie den Strahlengang im Mikroskop. Was ist beim Fernrohr anders?
 %
 \end{enumerate}
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
