--- a/Versuch_9-10n/Anleitung-9.tex
+++ b/Versuch_9-10n/Anleitung-9.tex
@@ -6,7 +6,7 @@ In diesem Versuch lernen Sie die Grundlagen der geometrischen Optik kennen, die 
 %------------------------------------------------
 \section{Stichworte}
 %------------------------------------------------
-Grundbegriffe und Gesetze der geometrischen Optik; Gausssche Linsenformel; Besselsches Verfahren; Bildkonstruktion.
+Grundbegriffe und Gesetze der geometrischen Optik; Gauss'sche Linsenformel; Besselsches Verfahren; Bildkonstruktion.
 %
 %------------------------------------------------
 \section{Literatur}
@@ -110,7 +110,7 @@ mit der die Brennweite $f$ der Linse oder eines Linsensystems bestimmt werden ka
 Der Vorteil des Bessel Verfahrens gegenüber der einfachen Bestimmung der Brennweite einer Linse aufgrund der Linsenformel \ref{eq:Linsenformel} besteht darin, dass für dicke Linsen die Lage der Hauptebenen der Linse nicht bekannt sein müssen. Diese können mit dem etwas aufwendigeren Verfahren nach Abbe jedoch auch bestimmt werden.
 
 
-
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -134,6 +134,7 @@ Der Vorteil des Bessel Verfahrens gegenüber der einfachen Bestimmung der Brennw
 %
 \item Wann existieren a) eine Linsenstellung, b) zwei Linsenstellungen und c) keine Linsenstellung, bei denen ein Gegenstand scharf abgebildet wird? (Die Frage bezieht sich auf das Besselverfahren)
 \end{enumerate} 
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
