--- a/Versuch_19-20n/Anleitung-20.tex
+++ b/Versuch_19-20n/Anleitung-20.tex
@@ -76,6 +76,7 @@ Dies lässt sich mit der Dulong-Petite'schen Regel (s. Gleichung \ref{eq:Dulong-
 	C_V = \frac{f}{2}R.
 \end{equation}
 
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -103,6 +104,7 @@ Dies lässt sich mit der Dulong-Petite'schen Regel (s. Gleichung \ref{eq:Dulong-
  \item Wie wird $c_v$ von Luft im Praktikum bestimmt?
  %
 \end{enumerate}
+\end{tutorhint}
 
 %------------------------------------------------
 \section{Durchführung} 
