Changed description of the measurement of the IV-characteristic of the illuminated solar cell.

--- a/Versuch_1-2n/Anleitung-1.tex
+++ b/Versuch_1-2n/Anleitung-1.tex
@@ -234,12 +234,13 @@ Im Versuch wird ein in aus 19 Einzelelementen geschaltetes Solarmodul verwendet.
 		Verdunkeln Sie die auf dem Abschirmgehäuse aufgesteckte Solarzelle mit einem der optischen Filter und messen Sie die I(U)-Kennlinie im Bereich von 0\,V bis etwa 10\,V in Schritten von 1\,V.
 	%
  
-	\begin{minipage}{0.4\textwidth}
+	\begin{minipage}{0.5\textwidth}
 			\item \textbf{Die Kennlinie einer beleuchteten Solarzelle:}\\
-		Ersetzen Sie das Netzgerät durch den regelbaren Lastwiderstand und entfernen Sie den Filter. Messen Sie die Kennlinie erneut.
+		Benutzen Sie als Spannungsquelle für die Solarzelle die Spannung über den regelbaren Widerstand. Stellen Sie dazu die Ausgangsspannung des Netzgeräts auf ihr Maximum und schließen Sie die Widerstände wie in der nebenstehenden Abbildung gezeigt an. Das Voltmeter sollte Spannungen zwischen etwa 7~V und 12~V anzeigen.\\
+		Entfernen Sie den Filter und messen Sie die Kennlinie erneut.
 		\vfill
 	\end{minipage}
-	\begin{minipage}{0.55\textwidth}
+	\begin{minipage}{0.45\textwidth}
 %		\includegraphics[width=1.00\textwidth]{Abbildungen/solarzelle.jpg}
 		\hfill
 		\input{Abbildungen/Solarzelle_beleuchtet_tikz.tex}
