Versuch Elektrische Netzwerke durch Signalausbreitung auf Leitern ersetzt. Räume geändert.

--- a/00_einl/versuche.tex
+++ b/00_einl/versuche.tex
@@ -12,7 +12,7 @@
  2 & Stoß & A.02.105\\
  3 & Wechselstrom und R-C-Kreis & A.01.108 \\ 
  4 & Spule und Transformator & A.01.108 \\ 
- 5 & Pohl'scher Resonator & A.01.105 \& 106 \\
+ 5 & Pohl'scher Resonator & A.02.104 \\
  6 & Trägheitsmoment & A.02.105\\
  7 & Kapillarität und Auftrieb & A.02.102 \\ 
  8 & Innere Reibung von Flüssigkeiten & A.02.102 \\ 
@@ -22,7 +22,7 @@
  12 & Beugung am Gitter & A.02.108\\ 
  13 & Thermoelement & A.01.102 \\ 
  14 & Ultraschall & A.01.116\\
- 15 & Elektrische Netzwerke & A.01.117 \\ 
+ 15 & Signalausbreitung auf Leitern & A.01.117 \\ 
  16 & Diffusion & A.01.102\\ 
  17 & Künstliche Radioaktivität & A.01.116 \\ 
  18 & Spezifische Elektronenladung & A.01.105 \\ 
