--- a/Versuch_5-6n/Anleitung-6.tex
+++ b/Versuch_5-6n/Anleitung-6.tex
@@ -92,7 +92,7 @@ $D^*$ heißt \textit{Winkelrichtgröße} oder \textit{Richtmoment} und ist eine 
 \begin{equation}
  \vec{T} = -D^*\cdot\varphi\cdot \hat{e}_{\varphi} = \dot{\vec{L}} = J\ddot{\varphi}\cdot\hat{e}_{\varphi}
 \end{equation}
-Drehschwingungen aus. Das Symbol $\dot{\vec{L}}$ bezeichnet dabei die zeitliche Änderung des Dreh- impulses $\vec{L} = m\cdot \vec{r}\times\vec{p}$. Analog zu den Translationsschwingungen aus Versuch 1 ergibt sich für die Frequenz der Schwingung:
+Drehschwingungen aus. Das Symbol $\dot{\vec{L}}$ bezeichnet dabei die zeitliche Änderung des Drehimpulses $\vec{L} = \vec{r}\times\vec{p}$. Analog zu den Translationsschwingungen aus Versuch 1 ergibt sich für die Frequenz der Schwingung:
 \begin{equation}
  \omega = \frac{2\pi}{T} = \sqrt{\frac{D^*}{J}}
 \end{equation}
@@ -133,8 +133,6 @@ $T$ ist hierbei die Schwingungsdauer.
 		%
 		\item Messen Sie den Radius $r$ der Scheibe.
 		%
-		\item Tragen Sie für jede Masse $M$ den entsprechenden Winkelausschlag $\Phi$ im Bogenmaß auf. Bilden Sie dazu jeweils den Mittelwert aus der Auslenkung im und gegen den Uhrzeigersinn und bestimmen Sie die Fehler auf diese Mittelwerte.
-		%
 		\item Nehmen Sie die Scheibe ab. Lösen Sie die Montageschraube und ziehen Sie die Halterung der Drehachse aus dem Stativ, um sie anschließend so zu montieren, dass die Drehachse vertikal liegt.
 		%
 		\item Messen Sie bei vertikaler Lage der Drehachse für jeden Versuchskörper (Vollzylinder, Hohlzylinder, Kugel, Quader, Stab) dreimal die Zeit für jeweils 10 Drehschwingungen. Beim Würfel sind zwei verschiedene Drehachsen zu wählen. Beim Stab werden zwei parallele Achsen gewählt; eine davon geht durch den Schwerpunkt, die andere liegt am Ende des Stabes.
@@ -159,7 +157,8 @@ $T$ ist hierbei die Schwingungsdauer.
 \end{hint}
 
 \begin{enumerate}
- %
+	\item Tragen Sie für jede Masse $M$ den entsprechenden Winkelausschlag $\Phi$ im Bogenmaß auf. Bilden Sie dazu jeweils den Mittelwert aus der Auslenkung im und gegen den Uhrzeigersinn und bestimmen Sie die Fehler auf diese Mittelwerte.
+	%
  \item Berechnen Sie aus der Steigung der Funktion $\Phi (M)$ das Richtmoment (Winkelrichtgröße) $D^*$ der Feder nach der Formel:
  \begin{equation}
  D^* = \frac{M}{\Phi}\cdot g\cdot r \; .
