--- a/Versuch_5-6n/Versuch-5.tex
+++ b/Versuch_5-6n/Versuch-5.tex
@@ -40,8 +40,8 @@
 
 \input{../utils/format.tex}
 
-  \input{../utils/disable-tutor.tex}
-  %\input{../utils/enable-tutor.tex}
+  %\input{../utils/disable-tutor.tex}
+  \input{../utils/enable-tutor.tex}
 
 \input{../utils/tutor.tex}
 
